--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
-  "peerDependencies": {},
   "husky": {
     "hooks": {
       "pre-commit": "tsdx lint"
@@ -48,6 +47,7 @@
     "@size-limit/preset-small-lib": "^7.0.5",
     "husky": "^7.0.4",
     "size-limit": "^7.0.5",
+    "ts-node": "^10.4.0",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.5.5"
